docs/envoy/v1.16.0/_sources/intro/arch_overview/security/external_dep_observability_ext.rst.txt

envoy.filters.http.aws_lambda
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.72.0 <https://github.com/curl/curl/releases/download/curl-7_72_0/curl-7.72.0.tar.gz>`__, 2020-08-19, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__


envoy.filters.http.aws_request_signing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.72.0 <https://github.com/curl/curl/releases/download/curl-7_72_0/curl-7.72.0.tar.gz>`__, 2020-08-19, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__


envoy.grpc_credentials.aws_iam
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.72.0 <https://github.com/curl/curl/releases/download/curl-7_72_0/curl-7.72.0.tar.gz>`__, 2020-08-19, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__


envoy.tracers.datadog
~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `Datadog OpenTracing C++ Client <https://github.com/DataDog/dd-opentracing-cpp>`__, `1.1.5 <https://github.com/DataDog/dd-opentracing-cpp/archive/v1.1.5.tar.gz>`__, 2020-05-15, 
  `msgpack for C/C++ <https://github.com/msgpack/msgpack-c>`__, `3.3.0 <https://github.com/msgpack/msgpack-c/releases/download/cpp-3.3.0/msgpack-3.3.0.tar.gz>`__, 2020-06-05, 
  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/archive/v1.5.1.tar.gz>`__, 2019-01-16, 


envoy.tracers.dynamic_ot
~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/archive/v1.5.1.tar.gz>`__, 2019-01-16, 


envoy.tracers.lightstep
~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `lightstep-tracer-cpp <https://github.com/lightstep/lightstep-tracer-cpp>`__, `1942b3f <https://github.com/lightstep/lightstep-tracer-cpp/archive/1942b3f142e218ebc143a043f32e3278dafec9aa.tar.gz>`__, 2020-08-24, 
  `OpenTracing <https://opentracing.io>`__, `1.5.1 <https://github.com/opentracing/opentracing-cpp/archive/v1.5.1.tar.gz>`__, 2019-01-16, 


envoy.tracers.opencensus
~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
  :header: Name, Version, Last updated, CPE
  :widths: 2, 1, 1, 2

  `curl <https://curl.haxx.se>`__, `7.72.0 <https://github.com/curl/curl/releases/download/curl-7_72_0/curl-7.72.0.tar.gz>`__, 2020-08-19, `cpe:2.3:a:haxx:curl:* <https://nvd.nist.gov/products/cpe/search/results?keyword=cpe%3A2.3%3Aa%3Ahaxx%3Acurl%3A%2A&status=FINAL&orderBy=CPEURI&namingFormat=2.3>`__
  `OpenCensus C++ <https://github.com/census-instrumentation/opencensus-cpp>`__, `7877337 <https://github.com/census-instrumentation/opencensus-cpp/archive/7877337633466358ed680f9b26967da5b310d7aa.tar.gz>`__, 2020-06-01, 

